manifests/gitops/base/01-common-environment-config/01-ossm-control-plane/auth-req.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: camelk-auth
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  jwtRules:
  - issuer: https://keycloak-sso.apps.sno.myocp.net/auth/realms/apps
    jwksUri: https://keycloak-sso.apps.sno.myocp.net/auth/realms/apps/protocol/openid-connect/certs
    forwardOriginalToken: true
