manifests/gitops/base/01-common-environment-config/01-ossm-control-plane/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: camelk-gateway
  rules:
  - from:
    - source:
       requestPrincipals: ["*"]
    when:
    - key: request.auth.claims[realm_access][roles]
      values: ["app-user"]
